(include_subdirs no)

(library
 (name masc_auth)
 (public_name masc.auth)
 (wrapped false)
 (flags
  :standard
  -open
  Masc_prometheus)
 (libraries
  yojson
  unix
  logs
  masc.masc_core
  masc.masc_types
  masc.config
  masc.config_dir_resolver
  eio
  mirage-crypto
  mirage-crypto-rng
  mirage-crypto-rng.unix
  digestif
  masc.fs_compat
  masc.masc_log
  time_compat
  masc.tool_types
  masc.masc_tool_dispatch
  masc.prometheus)
 (preprocess
  (pps ppx_deriving_yojson ppx_deriving.show ppx_deriving.eq)))
