(include_subdirs no)

(library
 (name masc_auth)
 (public_name masc.auth)
 (wrapped false)
 (private_modules auth_credential_base auth_metric_store)
 (libraries
  yojson
  unix
  logs
  masc.masc_core
  masc.masc_types
  masc.config
  masc.config_dir_resolver
  eio
  mirage-crypto
  mirage-crypto-rng
  mirage-crypto-rng.unix
  digestif
  masc.fs_compat
  masc.masc_log
  masc.masc_tool_dispatch
  masc.otel_metric_store
  masc.tool_types
  time_compat)
 (preprocess
  (pps ppx_deriving_yojson ppx_deriving.show ppx_deriving.eq)))
