(include_subdirs no)
(library
 (name masc_autoresearch)
 (public_name masc_mcp.masc_autoresearch)
 (wrapped false)
 ; RFC-0071 §3.4 Phase 5 ratchet: warning 4 (fragile pattern match) on.
 (flags (:standard -w +4))
 (modules
   autoresearch_types
   autoresearch_serde
   autoresearch_storage
   autoresearch_metric
   autoresearch_git
   autoresearch_file)
 (libraries
   yojson
   unix
   time_compat
   fs_compat
   masc_log
   masc_core
   masc_mcp.config
   masc_process
   masc_mcp.masc_exec
   agent_sdk
   masc_mcp.cdal_runtime
   eio))
