(include_subdirs no)
(library
 (name masc_backend)
 (public_name masc_mcp.masc_backend)
 (wrapped false)
 (modules
  backend_types
  backend_compression
  backend)
 (libraries
 masc_types
  masc_core
  masc_mcp.config
  masc_process
  masc_compression
  masc_log
  masc_eio_context
  time_compat
  fs_compat
  yojson
  unix
  eio
  eio.unix
  uri
  str
  mtime
  zstd
  base)
 (preprocess (pps ppx_deriving.show ppx_deriving.eq ppx_deriving_yojson)))
