(include_subdirs no)
(library
 (name masc_board)
 (public_name masc_mcp.masc_board)
 (wrapped false)
 (modules board_types)
 ; RFC-0071 §3.4 Phase 5 ratchet (warning 4)
 (flags (:standard -w +4))
 (libraries
   yojson
   re
   re.str
   re.pcre
   eio
   masc_random_id
   masc_mcp.config)
 (preprocess (pps ppx_deriving.show ppx_deriving.eq ppx_tla)))
