; Bounded_event_dedupe — shared stdlib-only event dedupe state machine
; for keeper/task log-noise reducers. Domain modules keep their typed
; public APIs; this leaf owns the repeated Hashtbl + Mutex + threshold
; mechanics so future reducers do not fork another bespoke state clone.

(include_subdirs no)

(library
 (name masc_bounded_event_dedupe)
 (public_name masc.bounded_event_dedupe)
 (wrapped false)
 (libraries))
