; RFC-0163 Phase D1 — Cascade_name leaf extraction.
; Pure canonical-name validation with no external dependencies
; (stdlib only). Extracted from lib/cascade/ to break the circular
; dependency between masc_mcp (which owns Cascade_name) and
; masc_mcp.cascade_ref (which needs Cascade_name.t in its type
; definition).

(include_subdirs no)

(library
 (name masc_mcp_cascade_name)
 (public_name masc_mcp.cascade_name)
 (wrapped false))
