; RFC-0056 Phase 0 — extract contract Phase 1A evaluator from flat masc.
; Mirrors lib/cdal_runtime/dune: (include_subdirs no) opts out of the
; parent's (include_subdirs unqualified), letting this directory compile
; as its own library. (wrapped false) keeps module names unqualified so
; existing callers (~23 for Cdal_types alone) do not rewrite imports —
; this is Phase 0 budget G3 / G5 in RFC-0056.
;
; Pairs with lib/cdal_runtime/ which hosts the producer side.
; Dependency direction: masc main lib -> masc.cdal -> masc_core.
; NOTE (2026-06-24): the masc.cdal_runtime dependency was removed — it was
; declared in (libraries) but never referenced by adversarial_eval.ml, the
; sole module in this sub-library (a dead build-graph edge). The RFC-0056
; "Phase 1" plan to fold cdal_judge / cdal_eval_v1 / cdal_loader here was
; not carried out; re-add the edge only when a module here actually uses it.

(include_subdirs no)

(library
 (name masc_cdal)
 (public_name masc.cdal)
 (wrapped false)
 ; RFC-0071 §3.4 Phase 5 ratchet: warning 4 (fragile pattern match) on.
 (flags
  (:standard -w +4))
 (libraries eio yojson masc_core masc.config masc.masc_exec masc.dated_jsonl))
