; RFC-OAS-011 — masc.cdal_runtime sublibrary: the agent-runtime/producer side
; of CDAL, migrated out of OAS (agent_sdk) into masc.
;
; Migration status (2026-06-24): MM-1~MM-4 landed 2026-05-08~11 — #14247
; (skeleton), #14248~#14264 (B1~B5 batches), #14267 (MM-3-rewire atomic flip
; Agent_sdk.* -> Masc_cdal_runtime.*), #14285 (MM-4 agent_sdk pin bump). The
; RFC document itself is still marked Draft (doc-lag); the code is complete.
;
; The contract/proof runtime pipeline migrated in B1~B5 was later PURGED in
; #19469 ("Track B", 2026-05-29, -4987 LoC). Removed modules — do NOT expect
; them here: cdal_proof, mode_enforcer, mode_resolver, risk_class,
; risk_contract, execution_mode, effect_evidence, proof_capture, proof_store,
; contract_runner, cognitive_event, criteria, internal_error_substrate.
;
; Surviving modules (all in active use):
;   autonomy_exec    — external execution primitive (used by fd_accountant)
;   direct_evidence  — proof/evidence materialization (used by worker_container)
;   sessions_proof   — worker-run + proof_bundle assembly (used by worker_container)
;   conformance      — session-proof conformance checks
;   runtime_evidence — telemetry + file evidence bundles
;
; Intentionally separated from masc's CDAL Phase 1A evaluator (lib/cdal/,
; masc.cdal, Adversarial_eval): different responsibility (producer vs
; consumer-side judge) and different deps (this needs agent_sdk; the evaluator
; needs none). NO dependency on the masc main library — the producer side must
; remain reusable independently.
;
; @rfc RFC-OAS-011 (CDAL Migration to masc)
; @phase Implemented (post-#19469 maintenance)

; The parent [lib/dune] uses [(include_subdirs unqualified)] which would
; otherwise absorb every .ml under lib/ into the main [masc] library
; and forbid declaring our own [(library)] stanza.  Marking this directory
; with [(include_subdirs no)] opts out of the parent's traversal so this
; sub-library compiles as a separate unit, mirroring sibling sub-libs
; (lib/activity_graph, lib/embedded_config, lib/mcp_session, ...).

(include_subdirs no)

(library
 (name masc_cdal_runtime)
 (public_name masc.cdal_runtime)
 (libraries
  masc_core
  agent_sdk.base
  ; agent_sdk (full): originally added for Guardrails_async, referenced by the
  ; now-purged guardrail_llm (#19469). Also backs the [-open Agent_sdk] flag
  ; below, so it cannot be dropped without auditing the flag. Whether any
  ; surviving module still needs the full agent_sdk is unverified (deps audit
  ; deferred — see header).
  agent_sdk
  ; unix: [Unix.gettimeofday] in conformance.ml (surviving module).
  unix
  ; eio + eio.unix: async fiber signatures in autonomy_exec.{ml,mli} (surviving).
  ; The other original users (guardrails_async, guardrail_tripwire,
  ; contract_runner) were purged in #19469.
  eio
  eio.unix
  ; eio_main: [Eio_main.run] in autonomy_exec.ml (surviving module).
  eio_main
  ; agent_sdk.llm_provider: originally for contract_runner ([Llm_provider.*]),
  ; purged in #19469 — likely dead, removal deferred pending a deps audit.
  agent_sdk.llm_provider
  yojson
  ppx_deriving_yojson.runtime)
 ; Mirror agent_sdk's flag so migrated modules' `open Types` /
 ; `open Result_syntax` resolve against Agent_sdk_base, matching their
 ; original OAS compilation context.  Also open the wrapped [Agent_sdk]
 ; namespace for unqualified references to agent_sdk submodules.  (The
 ; original example, [Guardrails_async] in guardrail_llm, was purged in
 ; #19469; the flag is kept because [-open Agent_sdk__] below relies on it.)
 ; XXX -open Agent_sdk__ accesses agent_sdk's internal wrapper module
 ; (no .mli, so all submodule aliases are visible — including
 ; [Sessions_types], which is referenced by sessions_proof.mli but
 ; deliberately not re-exported in agent_sdk.mli).  This is an
 ; internal-API workaround for PR #14264 RFC-OAS-011 MM-2-top B5;
 ; it should be replaced by either (a) re-exporting [Sessions_types]
 ; in [agent_sdk.mli] upstream, or (b) qualifying the cdal_runtime
 ; references to use [Agent_sdk.Sessions]/[Agent_sdk.Sessions_store].
 ; Using [Agent_sdk__] is fragile across dune wrapper-name changes.
 ; RFC-0071 §3.4 Phase 5 ratchet: warning 4 (fragile pattern match) on.
 (flags
  (:standard -w +4 -open Agent_sdk_base -open Agent_sdk -open Agent_sdk__))
 (preprocess
  (pps
   ppx_deriving_yojson
   ppx_deriving.show
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_inline_test
   ppx_let)))
