; RFC-0056 Phase 1K — extract Compaction_trigger leaf module from
; lib/keeper/. Third lib/keeper/ leaf after Phase 1I/1J.
;
; Pure dependency-leaf: stdlib + Yojson. Encodes explicit
; Manual/provider-overflow compaction origins and their typed JSON codec.
;
; (include_subdirs no) opts out of parent's (include_subdirs unqualified).
; (wrapped false) keeps the bare identifier `Compaction_trigger`.
; Wave D RFC will migrate to (wrapped true) + -open Tezos pattern.

(include_subdirs no)

(library
 (name masc_compaction_trigger)
 (public_name masc.compaction_trigger)
 (wrapped false)
 (flags
  (:standard -w +4))
 (libraries yojson))
